Update form and path to change db

--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -16,7 +16,7 @@
    <p>
     <%= form.label :title %><br>
     <%= form.text_field :title %>
-  </p>
+  </p> 
  
   <p>
     <%= form.label :logline %><br>
@@ -26,6 +26,11 @@
   <p>
     <%= form.label :phone %><br>
     <%= form.text_field :phone %>
+  </p>
+
+    <p>
+    <%= form.label :city %><br>
+    <%= form.text_field :city %>
   </p>
 
   <p>
