--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -28,10 +28,43 @@
     <%= form.text_field :phone %>
   </p>
 
-    <p>
+  <p>
     <%= form.label :city %><br>
     <%= form.text_field :city %>
   </p>
+
+  <p>
+    <%= form.label :state %><br>
+    <%= form.text_field :state %>
+  </p>
+
+<h2>Social Media</h2>
+
+  <p>
+    <%= form.check_box :_destroy%>
+    <%= form.label :facebook %>
+    <%= form.text_field :facebook %>
+  </p>
+
+    <p>
+    <%= form.check_box :_destroy%>
+    <%= form.label :instagram %>
+    <%= form.text_field :instagram %>
+  </p>
+
+  <p>
+    <%= form.check_box :_destroy%>
+    <%= form.label :linkedin %>
+    <%= form.text_field :linkedin %>
+  </p>
+
+  <p>
+    <%= form.check_box :_destroy%>
+    <%= form.label :other %>
+    <%= form.text_field :other %>
+  </p>
+
+
 
   <p>
     <%= form.submit %>
